# nview

./: .travis.yml  Brewfile  CMakeLists.txt  README.md  genman.sh  make.sh  nview.pro
.github/ISSUE_TEMPLATE/: config.yml
res/: nview.1
src/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preloadthread.cpp  preloadthread.h  version.h
